<resources>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_schedule_ride">@string/my_commute</string>
    <string name="title_activity_profile">Profile</string>

    <string name="app_name">Aluvi</string>
    <string name="scheduled_commute">Scheduled Commute</string>
    <string name="my_commute">My Commute</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="drive_there_user">I\'ll drive us there!</string>
    <string name="forget_pickup_point">Don\'t forget to review the pickup point - it may change. You may need to drive to reach it.</string>
    <string name="commute_tomorrow">Commute Tomorrow</string>
    <string name="return_home">Return home at:</string>
    <string name="at">At:</string>
    <string name="to">To:</string>
    <string name="from">From</string>
    <string name="cancelled_trips">Cancelled Trips</string>

    <string name="schedule_ready">At 9pm, we\'ll announce the commute groups for tomorrow. Go about your business until then - we\'ll send you an alert.</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please Wait...</string>
    <string name="logged_in">Logged In</string>
    <string name="retry">Retry</string>
    <string name="work">Work</string>
    <string name="home">Home</string>

    <string name="trip_requested">Your trip has been requested</string>
    <string name="trip_fulfilled_title">Commuter Ride Scheduled!</string>
    <string name="trip_fulfilled">Your commute to and from work has been fulfilled!</string>
    <string name="trip_complete">Your trip is complete</string>
    <string name="trip_unfulfilled_title">Commuter Ride Not Successful</string>
    <string name="trip_unfulfilled">We were unable to fulfill your commute to and from work</string>
    <string name="ride_cancelled">Ride cancelled!</string>
    <string name="fare_cancelled_by_rider">Trip cancelled by rider</string>
    <string name="fare_cancelled_by_driver">Trip cancelled by driver</string>
    <string name="commute_reminder">Buzz! You haven\'t scheduled a commute for tomorrow</string>
    <string name="ride_payment_problem">Error processing your payment</string>
    <string name="user_state_change">Your status on Aluvi has been updated</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="placeholder_password">AAAAAAA</string>
    <string name="login">Log In</string>

    <string name="close">Close</string>

    <string name="contact_driver">Contact Driver</string>
    <string name="late">I\'m Late!</string>
    <string name="riders_picked_up">Riders Picked Up</string>
    <string name="riders_dropped_off">Riders Dropped Off</string>
    <string name="profile">Profile</string>
    <string-array name="contact_options">
        <item>Call</item>
        <item>Text</item>
    </string-array>


    <string name="save">Save</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone #</string>
    <string name="work_email">Work Email</string>
    <string name="terms_services">In case you missed it, here are our Driver and Rider terms of service</string>
    <string name="register">Register</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="title_activity_receipts">Weekly Receipts</string>
    <string name="title_activity_tutorial">Tutorial</string>

    <string name="everyone_work">Everyone needs to get to work.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_invalid_phone">Invalid phone number</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="want_rider">I want to be a driver!</string>
    <string name="sign_up">Sign Up</string>
    <string name="all_about_you"><![CDATA[All About You >]]></string>
    <string name="next">Next</string>
    <string name="home_location">Home</string>
    <string name="work_location">Work Location</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_existing">Choose Existing</string>
    <string name="welcome_aluvi">Welcome to Aluvi!</string>
    <string name="welcome_text">We\'re so glad you\'ve decided to join Aluvi.</string>
    <string name="license_plate_number">License Plate #</string>
    <string name="car_details">Your Car\'s Details</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="license_number">Your License Number</string>
    <string name="profile_saved">Updated your profile</string>
    <string name="invalid_credit_card">Invalid credit card</string>
    <string name="card_details">Card Details</string>
    <string name="updating_payment_info">Updating your payment info</string>
    <string name="expiration_date">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="card_number">Card Number</string>
    <string name="invalid_expiration_date">Invalid expiration date</string>
    <string name="am_pickup">AM Pickup</string>
    <string name="pm_dropoff">PM Dropoff</string>
    <string name="ticket_updated">Ticket Updated</string>
    <string name="write_message">Write us a message and we\'ll get back to you via email</string>
    <string name="submit">Submit</string>
    <string name="emergency">Emergency</string>
    <string name="aluvi_default">Aluvi Update</string>
    <string name="forgot_password">Forget Your Password?</string>
    <string name="sign_up_aluvi">Sign Up for Aluvi</string>
    <string name="successfully_sent_request">Sent request</string>
    <string name="login_in_sign_up">Log In / Sign Up</string>
    <string name="new_user">New User</string>
    <string name="email_not_found">The email you provided was not found. Click \'Register\' to join Aluvi.</string>
    <string name="first_last_name">Full Name</string>
    <string name="driver_interested">Want to be the driver?</string>
    <string name="pickup_place">Choose place to get picked up and a work location:</string>
    <string name="action_print_receipts_email">Print to Email</string>
    <string name="cancel_trip_title">Cancel Trip?</string>
    <string name="cancel_trip_contents">Are you sure you want to cancel this trip?</string>
    <string name="receipts_emailed">Emailed receipts</string>
    <string name="take_selfie">Time to take a selfie so others recognize you</string>
    <string name="work_email_info">Optional: submit your work email and we\'ll automatically connect you with your co-workers</string>
    <string name="verify_password">Please verify your password to continue</string>
    <string name="pickup">Pickup Point</string>
    <string name="pickup_point_info">(Your pickup point will become a circular area 2 mi in diameter)</string>
    <string name="destination">Destination</string>
    <string name="withdraw_anytime">You can withdraw any time!</string>
    <string name="set_location">Set location and time</string>
    <string name="choose_location">Choose a <b>location</b> to get picked up. Driving? Set an <b>area</b> in which you\'d be willing to pick up riders. Add your <b>work</b> location and pickup time</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_info">We\'ll use those times and locations to match riders and drivers together. Rides are scheduled at 9:00 PM the night before you need to get to work.</string>
    <string name="get_started">Swipe left to get started with</string>
    <string name="aluvi_large">Aluvi!</string>
    <string name="skip_tutorial">Skip Tutorial</string>
    <string name="get_pickup_point">Get to the pickup point!</string>
    <string name="get_pickup_point_info">Pay close attention to your pickup spot and be sure to be <b>on time</b>. Then sit back and enjoy - your first round trip commute is on <b>US</b>! After that you pay the driver while we take c. 98 per direction, no matter the distance.</string>
    <string name="cancel_ride_question">Cancel Ride?</string>
    <string name="cancel_ride_confirmation">Are you cancelling both directions of your commute, or just your commute to work?</string>
    <string name="only_work">Only to Work</string>
    <string name="both_directions">Both Directions</string>

    <string name="ok_do_it">OK, Do it!</string>
    <string name="not_now">Not Now</string>
    <string name="withdraw_requested">Your withdrawal will be processed shortly.  You will receive a push message once funds are transfered</string>
    <string name="great">Great!</string>
    <string name="unkown_transition"></string>

    <string name="phone_permission_missing">We don\'t have permission to make this call!</string>
</resources>
