<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/aluvi_background_gradient_location_select">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/onboarding_location_next_button"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/onboarding_button_home_location"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/home_location"
            android:theme="@style/AluviButton"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/onboarding_button_work_location"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignEnd="@+id/onboarding_button_home_location"
            android:layout_alignLeft="@+id/onboarding_button_home_location"
            android:layout_alignRight="@+id/onboarding_button_home_location"
            android:layout_alignStart="@+id/onboarding_button_home_location"
            android:layout_below="@+id/onboarding_button_home_location"
            android:text="@string/work_location"
            android:theme="@style/AluviButton"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_interested"
            android:id="@+id/onboarding_checkbox_interested_driver"
            android:layout_below="@+id/onboarding_button_work_location"
            android:layout_centerHorizontal="true"
            android:checked="false"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pickup_place"
            android:id="@+id/textView12"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"/>
    </RelativeLayout>

    <Button
        android:id="@+id/onboarding_location_next_button"
        style="@style/AluviFullWidthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/next"/>
</RelativeLayout>