<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/aluvi_background_gradient_location_select">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/onboarding_register_driver_button_next"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/onboarding_register_driver_edit_text_license_number"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:hint="@string/license_plate_number"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"/>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/car_details"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_alignLeft="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_alignRight="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_alignStart="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_below="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_marginTop="10dp"
            android:hint="@string/make"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"/>

        <EditText
            android:id="@+id/onboarding_register_driver_edit_text_car_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_alignStart="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_below="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/onboarding_register_driver_edit_text_car_year"
            android:layout_toStartOf="@+id/onboarding_register_driver_edit_text_car_year"
            android:hint="@string/model"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"/>

        <EditText
            android:id="@+id/onboarding_register_driver_edit_text_car_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/onboarding_register_driver_edit_text_car_model"
            android:layout_alignEnd="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:layout_alignRight="@+id/onboarding_register_driver_edit_text_license_plate_number"
            android:hint="@string/year"
            android:imeOptions="actionDone"
            android:inputType="number"/>

        <EditText
            android:id="@+id/onboarding_register_driver_edit_text_license_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_alignLeft="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_alignRight="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_alignStart="@+id/onboarding_register_driver_edit_text_car_make"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="20dp"
            android:hint="@string/license_number"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"/>
    </RelativeLayout>

    <Button
        android:id="@+id/onboarding_register_driver_button_next"
        style="@style/OnboardingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:text="@string/next"/>
</RelativeLayout>