<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.aluvi.android.fragments.ProfileFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_view"
        android:layout_width="@dimen/large_profile_picture_width"
        android:layout_height="@dimen/large_profile_picture_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:clickable="true"
        android:src="@mipmap/test_profile_pic"/>

    <TextView
        android:id="@+id/profile_text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout"
        android:layout_below="@+id/profile_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-light"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <EditText
        android:id="@+id/profile_edit_text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/profile_text_view_name"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/profile_edit_text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_edit_text_email"
        android:layout_alignLeft="@+id/profile_edit_text_email"
        android:layout_alignRight="@+id/profile_edit_text_email"
        android:layout_alignStart="@+id/profile_edit_text_email"
        android:layout_below="@+id/profile_edit_text_email"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/profile_edit_text_work_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/profile_edit_text_phone_number"
        android:layout_alignLeft="@+id/profile_edit_text_phone_number"
        android:layout_alignRight="@+id/profile_edit_text_phone_number"
        android:layout_alignStart="@+id/profile_edit_text_phone_number"
        android:layout_below="@+id/profile_edit_text_phone_number"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/work_email"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_edit_text_work_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/terms_services"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"/>

</RelativeLayout>
